<resources>
    <string name="app_name">Workout Buddy</string>
    <string name="login_login">Login</string>
    <string name="login_sign_up">Sign up</string>
    <string name="titleForWorkouts">Workouts</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">User Name</string>
    <string name="nav_header_subtitle">user@domain.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_workouts">Workouts</string>
    <string name="menu_exercises">Exercises</string>
    <string name="menu_history">History</string>
    <string name="menu_connection">Connections</string>
    <string name="menu_settings">Settings</string>
    <string name="loading">Loading...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_buddies_hint">Search Buddies</string>
    <string name="url_optional">URL (optional):</string>
    <string name="youtube_video_url">YouTube video url</string>
    <string name="duration">Duration</string>
    <string name="reps">Reps</string>
    <string name="type">Type:</string>
    <string name="enter_number_of_sets">Enter number of sets</string>
    <string name="sets">Sets:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>