<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_workouts">

    <fragment
        android:id="@+id/nav_workouts"
        android:name="com.workoutbuddy.app.fragment.WorkoutsFragment"
        android:label="@string/menu_workouts"
        tools:layout="@layout/fragment_workouts" />

    <fragment
        android:id="@+id/nav_exercises"
        android:name="com.workoutbuddy.app.fragment.ExercisesFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.workoutbuddy.app.fragment.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_connections"
        android:name="com.workoutbuddy.app.fragment.ConnectionsFragment"
        android:label="@string/menu_connection"
        tools:layout="@layout/fragment_connections" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.workoutbuddy.app.fragment.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>