<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workouts"
            android:icon="@drawable/icon_drawer_dumbbell"
            android:title="@string/menu_workouts" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/icon_drawer_pushup"
            android:title="@string/menu_exercises" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/icon_drawer_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_connections"
            android:icon="@drawable/icon_drawer_connection"
            android:title="Connections" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_drawer_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>