<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EditWorkoutExerciseFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:textStyle="" />

            <EditText
                android:id="@+id/edit_text_sets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_number_of_sets"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/reps_toggle_btn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reps" />

                <Button
                    android:id="@+id/duration_toggle_btn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <!-- This is the container for the dynamic content -->
            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Load:"/>

            <EditText
                android:id="@+id/text_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="Weight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url_optional"
                android:textStyle="" />

            <EditText
                android:id="@+id/text_exercise_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/youtube_video_url"
                android:inputType="textUri" />

            <!-- TODO: Add video -->
            <WebView
                android:id="@+id/videoPlaceHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="WebViewLayout" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Save" />


        </LinearLayout>

    </ScrollView>

</FrameLayout>
